[gd_scene load_steps=2 format=3 uid="uid://cmeapmohuhlkn"]

[ext_resource type="Script" uid="uid://mnab5omg8uou" path="res://src/battle/ui/player_ui_stack/target_select/battle_ui_stack_target_select.gd" id="1_srqw8"]

[node name="BattleUIStackTargetSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srqw8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LeftButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<"

[node name="SelectButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TARGET"

[node name="RightButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ">"
